@startuml

skinparam DefaultFontName "arial"

title Exist

class Container {
	+ [ _parts ] : Set < Exist >
	..
	+ terminate()

}

class Exist {
	+ container : Container
	..
	+ addRef( ref : Exist.Ref )
	+ removeRef( ref )
	# refs : Set< Ref >
	..
	+ terminate()
}

class "Exist.Ref" as ExistRef {
	+ source : Exist
	..
	+ _new_source( newsrc, oldsrc )
}

class Set {
	add( ref )
	delete( ref )
}

Container <|-- Exist
Container --* Exist
Container *--o Exist
ExistRef o-o Exist

Set <|-- Refs
Refs *-- ExistRef


@enduml
